Improved design of the section where the phrase spoken by Pedro Moncayo was displayed.

--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
       <source src="./assets/prueba.mp3" type="audio/mp3" >
       Tu navegador no soporta audio HTML5.
     </audio> -->
-    <blockquote>
-      <div class="phrase">
-        <p>"Más alto que todo está la Justicia como Fundamento y fin primordiales de la sociedad; y donde ella no existe
+    <blockquote class="main__blockquote">
+      <div>
+        <p class="main__blockquote__text">"Más alto que todo está la Justicia como Fundamento y fin primordiales de la
+          sociedad; y donde ella no existe
           no hay Patria, Deber, ni Compromisos Sociales".
         </p>
-        <p><b>Pedro Moncayo (1807 - 1888)</b> </p>
+        <p class="main__blockquote__author">Pedro Moncayo (1807 - 1888)</p>
       </div>
+
     </blockquote>
 
 
