--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
       <source src="./assets/prueba.mp3" type="audio/mp3" >
       Tu navegador no soporta audio HTML5.
     </audio> -->
+    <div class="main__logo">
+      <div class="main__logo__image">
+        <img src="./img/logo2.png">
+      </div>
+      <p class="main__logo__first-title">FUNDACIÓN CULTURAL "PEDRO MONCAYO"</p>
+      <p class="main__logo__second-title">INSTITUCIÓN PRIVADA PARA EL DESAROLLO</p>
+      <p class="main__logo__second-title">CULTURAL Y SOCIAL</p>
+    </div>
     <blockquote class="main__blockquote">
       <div>
         <p class="main__blockquote__text">"Más alto que todo está la Justicia como Fundamento y fin primordiales de la
@@ -113,22 +121,13 @@
         </p>
         <p class="main__blockquote__author">Pedro Moncayo (1807 - 1888)</p>
       </div>
-
     </blockquote>
-
-
     <div class="main__about">
-      <img src="./img/logo2.png">
-      <p class="main__about__first-title">FUNDACIÓN CULTURAL "PEDRO MONCAYO"</p>
-      <p class="main__about__second-title">INSTITUCIÓN PRIVADA PARA EL DESAROLLO</p>
-      <p class="main__about__second-title">CULTURAL Y SOCIAL</p>
-    </div>
-    <div class="test">
       <h2>Quiénes Somos</h2>
       <p class="main__about__content">
         Somos una entidad cultural privada, regidos por el Ministerio de Cultura y Patrimonio del Ecuador. Tenemos
         existencia legal y jurídica, desde el 27 de mayo de 1988.</p>
-      <div style="display: block; width: 100%; height: 50px;">
+      <div class="main__about__more">
         <a href="./pages/about/index.html">LEER MÁS</a>
       </div>
     </div>
