Updated home page, added slider to show restorations.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,21 @@
       </div>
     </div>
     <div class="main__test">
-      <img src="./img/img2.jpg" style="height: 20em; width: 20em;">
+      <!-- Swiper -->
+      <div class="swiper mySwiperS">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="./img/img1.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="./img/img2.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="./img/img3.jpg" alt=""></div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
     </div>
     <!-- <h2>Cursos, Eventos y Talleres</h2> -->
     <div class="main__header-event">
