--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 </head>
@@ -199,6 +198,51 @@
         </div>
       </div>
     </div>
+    <div class="main__header-event">
+      <p>Contáctanos</h>
+    </div>
+    <div class="main__contact">
+      <div class="main__contact__first-section">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1026.662886291829!2d-78.1167297860744!3d0.3512663481516291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2a3de1f30033c9%3A0x26494d2d914e1ad7!2sFUNDACION%20CULTURAL%20PEDRO%20MONCAYO!5e0!3m2!1ses!2sec!4v1649705094461!5m2!1ses!2sec"
+          width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="main__contact__second-section">
+        <div class="main__contact__second-section__first-column">
+          <h2>Sugerencias</h2>
+          <!-- <input type="text" name="name" id="name" placeholder="Nombres"> -->
+          <input type="email" name="email" id="email" placeholder="Correo">
+          <input type="text" name="asunto" id="asunto" placeholder="Asunto">
+          <textarea name="message" id="message" cols="30" rows="8" placeholder="Mensaje"></textarea>
+          <button><i class="fa fa-paper-plane"></i> Enviar</button>
+        </div>
+        <div class="main__contact__second-section__second-column">
+          <h2>Contactos</h2>
+          <div class="main__contact__second-section__second-column__information">
+            <p><i class="fas fa-map-marker-alt"></i><a href="https://goo.gl/maps/D37p1SNkrTNiNeyN8"
+                target="_blank">García
+                Moreno 3-76 y Vicente Rocafuerte</a></p>
+            <p><i class="fas fa-envelope"></i><a
+                href="mailto:fundacionpedromoncayo@gmail.com">fundacionpedromoncayo@gmail.com</a></p>
+            <p><i class="fas fa-phone-alt"></i><a href="tel:06 295 8922">06 295 8922</a></p>
+            <p><i class="fas fa-mobile-alt"></i><a href="tel:+593 988449055">+593 988449055</a></p>
+            <p class="main__contact__second-section__second-column__information__city"><b>Ibarra - Ecuador</b></p>
+          </div>
+          <div class="main__contact__second-section__second-column__foundation">
+            <div class="main__contact__second-section__second-column__foundation__logo">
+              <img src="./img/logo3.png">
+            </div>
+            <div class="main__contact__second-section__second-column__foundation__name-foundation">
+              <div>
+                <p>FUNDACIÓN CULTURAL</p>
+                <p>"PEDRO MONCAYO"</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- 
@@ -209,55 +253,6 @@
 
   <footer>
     <div class="decoration"></div>
-    <div class="about-company">
-      <div class="about-company__first-column">
-        <div class="about-company__first-column__foundation">
-          <div class="about-company__first-column__foundation__logo">
-            <img src="./img/logo3.png">
-          </div>
-          <div class="about-company__first-column__foundation__name-foundation">
-            <div>
-              <p>FUNDACIÓN CULTURAL</p>
-              <p>"PEDRO MONCAYO"</p>
-            </div>
-          </div>
-        </div>
-        <h2>Sobre Nosotros</h2>
-        <div class="about-company__first-column__information">
-          <p>
-            Somos una entidad cultural privada, regidos por el Ministerio de Cultura y Patrimonio del Ecuador. Tenemos
-            existencia legal y jurídica, desde el 27 de mayo de 1988.</p>
-        </div>
-      </div>
-      <div class="about-company__second-column">
-        <h2>Contáctanos</h2>
-        <div class="about-company__second-column__information">
-          <p><i class="fas fa-map-marker-alt"></i><a href="https://goo.gl/maps/D37p1SNkrTNiNeyN8" target="_blank">García
-              Moreno 3-76 y Vicente Rocafuerte</a></p>
-          <p><i class="fas fa-envelope"></i><a
-              href="mailto:fundacionpedromoncayo@gmail.com">fundacionpedromoncayo@gmail.com</a></p>
-          <p><i class="fas fa-phone-alt"></i><a href="tel:06 295 8922">06 295 8922</a></p>
-          <p><i class="fas fa-mobile-alt"></i><a href="tel:+593 988449055">+593 988449055</a></p>
-          <p class="about-company__second-column__information__city"><b>Ibarra - Ecuador</b></p>
-        </div>
-      </div>
-      <div class="about-company__third-column">
-        <h2>Contact Us</h2>
-        <form action="#" method="post">
-          <!-- <input type="text" name="name" id="name" placeholder="Nombres"> -->
-          <input type="email" name="email" id="email" placeholder="Correo">
-          <input type="text" name="asunto" id="asunto" placeholder="Asunto">
-          <textarea name="message" id="message" cols="30" rows="8" placeholder="Mensaje"></textarea>
-          <button><i class="fa fa-paper-plane"></i> Enviar</button>
-        </form>
-      </div>
-    </div>
-    <div class="google-maps">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1026.662886291829!2d-78.1167297860744!3d0.3512663481516291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2a3de1f30033c9%3A0x26494d2d914e1ad7!2sFUNDACION%20CULTURAL%20PEDRO%20MONCAYO!5e0!3m2!1ses!2sec!4v1649705094461!5m2!1ses!2sec"
-        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
     <div class="social-networks">
       <div class="social-networks__icon-container">
         <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank" class="twitter">
