Responsive design fix for the contact us section of the homepage.

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
       <source src="./assets/prueba.mp3" type="audio/mp3" >
       Tu navegador no soporta audio HTML5.
     </audio> -->
-    <div class="main__logo">
+    <!-- <div class="main__logo">
       <div class="main__logo__image">
         <img src="./img/logo2.png">
       </div>
       <p class="main__logo__first-title">FUNDACIÓN CULTURAL "PEDRO MONCAYO"</p>
       <p class="main__logo__second-title">INSTITUCIÓN PRIVADA PARA EL DESAROLLO</p>
       <p class="main__logo__second-title">CULTURAL Y SOCIAL</p>
-    </div>
+    </div> -->
     <blockquote class="main__blockquote">
       <div>
         <p class="main__blockquote__text">"Más alto que todo está la Justicia como Fundamento y fin primordiales de la
