--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     TODO: CUERPO
     TODO: -------------------------------------------
    -->
-  <main class="main">
+  <main>
     <!-- <audio controls autoplay>
       <source src="./assets/prueba.mp3" type="audio/mp3" >
       Tu navegador no soporta audio HTML5.
@@ -112,27 +112,27 @@
       <p class="main__logo__second-title">INSTITUCIÓN PRIVADA PARA EL DESAROLLO</p>
       <p class="main__logo__second-title">CULTURAL Y SOCIAL</p>
     </div> -->
-    <blockquote class="main__blockquote">
+    <blockquote class="blockquote">
       <div>
-        <p class="main__blockquote__text">"Más alto que todo está la Justicia como Fundamento y fin primordiales de la
+        <p class="blockquote__text">"Más alto que todo está la Justicia como Fundamento y fin primordiales de la
           sociedad; y donde ella no existe
           no hay Patria, Deber, ni Compromisos Sociales".
         </p>
-        <p class="main__blockquote__author">Pedro Moncayo (1807 - 1888)</p>
+        <p class="blockquote__author">Pedro Moncayo (1807 - 1888)</p>
       </div>
     </blockquote>
-    <div class="main__about">
+    <div class="about">
       <h2>Quiénes Somos</h2>
-      <p class="main__about__content">
+      <p class="about__content">
         Somos una entidad cultural privada, regidos por el Ministerio de Cultura y Patrimonio del Ecuador. Tenemos
         existencia legal y jurídica, desde el 27 de mayo de 1988.</p>
-      <div class="main__about__more">
+      <div class="about__more">
         <a href="./pages/about/index.html">LEER MÁS</a>
       </div>
     </div>
-    <div class="main__header-event">
+    <div class="header-restoration">
       <p>Restauración</p>
-      <div class="msm">
+      <div class="header-restoration__more">
         <a href="./pages/history/index.html">Ver Más</a>
       </div>
     </div>
@@ -154,9 +154,9 @@
       </div>
     </div>
     <!-- <h2>Cursos, Eventos y Talleres</h2> -->
-    <div class="main__header-event">
+    <div class="header-event">
       <p>Próximos Talleres</h>
-      <div class="msm">
+      <div class="header-event__more">
         <a href="./pages/workshop/index.html">Ver Más</a>
       </div>
     </div>
@@ -198,18 +198,18 @@
         </div>
       </div>
     </div>
-    <div class="main__header-event">
+    <div class="header-contact">
       <p>Contáctanos</h>
     </div>
-    <div class="main__contact">
-      <div class="main__contact__first-section">
+    <div class="contacts">
+      <div class="contacts__first-section">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1026.662886291829!2d-78.1167297860744!3d0.3512663481516291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2a3de1f30033c9%3A0x26494d2d914e1ad7!2sFUNDACION%20CULTURAL%20PEDRO%20MONCAYO!5e0!3m2!1ses!2sec!4v1649705094461!5m2!1ses!2sec"
           width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="main__contact__second-section">
-        <div class="main__contact__second-section__first-column">
+      <div class="contacts__second-section">
+        <div class="contacts__second-section__first-column">
           <h2>Sugerencias</h2>
           <!-- <input type="text" name="name" id="name" placeholder="Nombres"> -->
           <input type="email" name="email" id="email" placeholder="Correo">
@@ -217,9 +217,9 @@
           <textarea name="message" id="message" cols="30" rows="8" placeholder="Mensaje"></textarea>
           <button><i class="fa fa-paper-plane"></i> Enviar</button>
         </div>
-        <div class="main__contact__second-section__second-column">
+        <div class="contacts__second-section__second-column">
           <h2>Contactos</h2>
-          <div class="main__contact__second-section__second-column__information">
+          <div class="contacts__second-section__second-column__information">
             <p><i class="fas fa-map-marker-alt"></i><a href="https://goo.gl/maps/D37p1SNkrTNiNeyN8"
                 target="_blank">García
                 Moreno 3-76 y Vicente Rocafuerte</a></p>
@@ -227,13 +227,13 @@
                 href="mailto:fundacionpedromoncayo@gmail.com">fundacionpedromoncayo@gmail.com</a></p>
             <p><i class="fas fa-phone-alt"></i><a href="tel:06 295 8922">06 295 8922</a></p>
             <p><i class="fas fa-mobile-alt"></i><a href="tel:+593 988449055">+593 988449055</a></p>
-            <p class="main__contact__second-section__second-column__information__city"><b>Ibarra - Ecuador</b></p>
+            <p class="contacts__second-section__second-column__information__city"><b>Ibarra - Ecuador</b></p>
           </div>
-          <div class="main__contact__second-section__second-column__foundation">
-            <div class="main__contact__second-section__second-column__foundation__logo">
+          <div class="contacts__second-section__second-column__foundation">
+            <div class="contacts__second-section__second-column__foundation__logo">
               <img src="./img/logo3.png">
             </div>
-            <div class="main__contact__second-section__second-column__foundation__name-foundation">
+            <div class="contacts__second-section__second-column__foundation__name-foundation">
               <div>
                 <p>FUNDACIÓN CULTURAL</p>
                 <p>"PEDRO MONCAYO"</p>
