--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           sociedad; y donde ella no existe
           no hay Patria, Deber, ni Compromisos Sociales".
         </p>
-        <p class="blockquote__author">Pedro Moncayo (1807 - 1888)</p>
+        <p class="blockquote__author">Pedro Moncayo y Esparza (1807 - 1888)</p>
       </div>
     </blockquote>
     <div class="about">
@@ -160,9 +160,9 @@
         <a href="./pages/workshop/index.html">Ver Más</a>
       </div>
     </div>
-    <div id="test" class="container">
-      <div class="card">
-        <div class="content">
+    <div id="courses-content" class="courses-content">
+      <div class="courses-content__card">
+        <div class="courses-content__card__course">
           <h3>Capacitación de Informática</h3>
           <div id='img${task.idpub}'><img src="./img/img3.jpg" alt=""></div>
           <i class="fa fa-eye"></i>
@@ -173,8 +173,8 @@
           </button>
         </div>
       </div>
-      <div class="card">
-        <div class="content">
+      <div class="courses-content__card">
+        <div class="courses-content__card__course">
           <h3>Capacitación de Informática</h3>
           <div id='img${task.idpub}'><img src="./img/img2.jpg" alt=""></div>
           <i class="fa fa-eye"></i>
@@ -185,8 +185,8 @@
           </button>
         </div>
       </div>
-      <div class="card">
-        <div class="content">
+      <div class="courses-content__card">
+        <div class="courses-content__card__course">
           <h3>Capacitación de Informática</h3>
           <div id='img${task.idpub}'><img src="./img/img1.jpg" alt=""></div>
           <i class="fa fa-eye"></i>
@@ -211,11 +211,11 @@
       <div class="contacts__second-section">
         <div class="contacts__second-section__first-column">
           <h2>Sugerencias</h2>
-          <!-- <input type="text" name="name" id="name" placeholder="Nombres"> -->
+          <input type="text" name="name" id="name" placeholder="Nombres">
           <input type="email" name="email" id="email" placeholder="Correo">
-          <input type="text" name="asunto" id="asunto" placeholder="Asunto">
+          <input type="text" name="asunto" id="subject" placeholder="Asunto">
           <textarea name="message" id="message" cols="30" rows="8" placeholder="Mensaje"></textarea>
-          <button><i class="fa fa-paper-plane"></i> Enviar</button>
+          <button id="contacts__second-section__first-column__send-msg"><i class="fas fa-envelope"></i> Enviar</button>
         </div>
         <div class="contacts__second-section__second-column">
           <h2>Contactos</h2>
