Modification to the content section of the about us page.

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -92,6 +92,14 @@
   <main class="main">
     <div class="container">
       <div class="content">
+        <div class="content-list">
+          <h2>Contenido</h2>
+          <ul>
+            <li><a href="#QuienesSomos"><span>Quiénes Somos</span></a></li>
+            <li><a href="#Mision">Misión</a></li>
+            <li><a href="#Vision">Visión</a></li>
+          </ul>
+        </div>
         <section id="QuienesSomos">
           <h2>Quiénes Somos</h2>
           <p>Somos una entidad cultural privada, regidos por el Ministerio de Cultura y Patrimonio del Ecuador. Tenemos
@@ -125,7 +133,7 @@
           </p>
         </section>
       </div>
-      <aside class="nav-lateral">
+      <!-- <aside class="nav-lateral">
         <div class="nav-lateral-list">
           <h2>Content</h2>
           <ul>
@@ -137,7 +145,7 @@
           <h2>Restauración</h2>
         </div>
 
-      </aside>
+      </aside> -->
     </div>
 
   </main>
