Modification to the authorities section of the page dignities.

--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -91,12 +91,12 @@
    -->
   <main class="main">
     <div class="container">
-      <p>
+      <!-- <p>
         La Asamblea General de la Fundación está integrada por los siguientes Miembros Activos: El Sr. Arq. Marco
         Almeida Vinueza, y Prof. Roberto Morales Almeida, Sr. Garcia Gallejos y Sra. Rosa Reascos Egas, mentalizadores y
         propulsores de su constitución; Prof. Pedro Manuel Zumárraga, Sra Clemencia Pavón, Sra. Cecilia Ponce Placencia,
         Lic. Susana Cifuentes Almeida, Dra. Mariana Guzmán Villena, Lcda. Alicia Bastidas, Dra. Inés Flores y Sra. Jenny
-        Terán Estrada.</p>
+        Terán Estrada.</p> -->
       <h2>Dirección Actual</h2>
       <div class="container__first">
         <div class="container__first__cell">
@@ -128,55 +128,24 @@
         </div>
       </div>
       <h2>Lista de los Fundadores</h2>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Sr. Arq. Marco Almeida Vinueza</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Prof. Roberto Morales Almeida</h3>
-        </div>
-      </div>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Sr. García Gallegos</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Sra. Rosa Reascos Egas</h3>
-        </div>
-      </div>
+
+      <h3>Sr. Arq. Marco Almeida Vinueza</h3>
+
+      <h3>Prof. Roberto Morales Almeida</h3>
+
+      <h3>Sr. García Gallegos</h3>
+
+      <h3>Sra. Rosa Reascos Egas</h3>
+
       <h2>Lista de los Mentalizadores y Propulsores de su Constitución</h2>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Prof. Pedro Manuel Zumárraga</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Sra. Clemencia Pavón</h3>
-        </div>
-      </div>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Sra. Cecilia Ponce Placencia</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Lic. Susana Cifuentes Almeida</h3>
-        </div>
-      </div>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Dra. Mariana Guzmán Villena</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Lcda. Alicia Bastidas</h3>
-        </div>
-      </div>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <h3>Dra. Inés Flores</h3>
-        </div>
-        <div class="container__second__cell">
-          <h3>Sra. Jenny Terán Estrada</h3>
-        </div>
-      </div>
+      <h3>Prof. Pedro Manuel Zumárraga</h3>
+      <h3>Sra. Clemencia Pavón</h3>
+      <h3>Sra. Cecilia Ponce Placencia</h3>
+      <h3>Lic. Susana Cifuentes Almeida</h3>
+      <h3>Dra. Mariana Guzmán Villena</h3>
+      <h3>Lcda. Alicia Bastidas</h3>
+      <h3>Dra. Inés Flores</h3>
+      <h3>Sra. Jenny Terán Estrada</h3>
     </div>
   </main>
 
