Addition of a sidebar to the about us page.

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -93,11 +93,11 @@
     <div class="container">
       <div class="content">
         <div class="content-list">
-          <h2>Contenido</h2>
+          <h3>Contenido</h3>
           <ul>
-            <li><a href="#QuienesSomos"><span>Quiénes Somos</span></a></li>
-            <li><a href="#Mision">Misión</a></li>
-            <li><a href="#Vision">Visión</a></li>
+            <li><a href="#QuienesSomos"><span>1. Quiénes Somos</span></a></li>
+            <li><a href="#Mision">2. Misión</a></li>
+            <li><a href="#Vision">3. Visión</a></li>
           </ul>
         </div>
         <section id="QuienesSomos">
@@ -107,45 +107,46 @@
         </section>
         <section id="Mision">
           <h2>Misión</h2>
-          <p>
-            La Fundación Cultural Pedro Moncayo es una entidad privada del sector civil, democrática e inclusiva donde
-            se
-            promueve
-            el conocimiento de la vida, obra y pensamiento del egregio ibarreño, Dr. Pedro Moncayo y Esparza, se fomenta
-            el
-            patriotismo, difunden las artes, la investigación, la ciencia, la salvaguarda, promoción y divulgación del
-            patrimonio cultural tangible e intangible y otras manifestaciones culturales tendientes a la defensa de la
-            ecología, los ecosistemas y la biodiversidad en procura del robustecimiento de nuestra identidad y el
-            desarrollo
-            humano sostenible.</p>
+          <p>La Fundación Cultural Pedro Moncayo es una entidad privada del sector civil, democrática e inclusiva donde
+            se promueve el conocimiento de la vida, obra y pensamiento del egregio ibarreño, Dr. Pedro Moncayo y
+            Esparza, se fomenta el patriotismo, difunden las artes, la investigación, la ciencia, la salvaguarda,
+            promoción y divulgación del patrimonio cultural tangible e intangible y otras manifestaciones culturales
+            tendientes a la defensa de la ecología, los ecosistemas y la biodiversidad en procura del robustecimiento de
+            nuestra identidad y el desarrollo humano sostenible.</p>
         </section>
         <section id="Vision">
           <h2>Visión</h2>
-          <p>
-            Ser la entidad provincial que lidere la cátedra del Dr. Pedro Moncayo y Esparza, a fin de que se conozca la
+          <p>Ser la entidad provincial que lidere la cátedra del Dr. Pedro Moncayo y Esparza, a fin de que se conozca la
             múltiple valía del eximio ibarreño, especialmente en las generaciones jóvenes. Será la institución que
-            conserva,
-            promueve y divulga el patrimonio cultural, ofrece alternativas sociales y culturales y las alianzas
-            estratégicas
-            en proyectos de ciudad y de provincia con la activa participación de sus miembros y promotores culturales y
-            la
-            ciudadanía.
+            conserva, promueve y divulga el patrimonio cultural, ofrece alternativas sociales y culturales y las
+            alianzas estratégicas en proyectos de ciudad y de provincia con la activa participación de sus miembros y
+            promotores culturales y la ciudadanía.
           </p>
         </section>
       </div>
-      <!-- <aside class="nav-lateral">
+      <aside class="nav-lateral">
         <div class="nav-lateral-list">
-          <h2>Content</h2>
-          <ul>
-            <li><a href="#QuienesSomos"><span>Quiénes Somos</span></a></li>
-            <li><a href="#Mision">Misión</a></li>
-            <li><a href="#Vision">Visión</a></li>
-          </ul>
-          <h2>Talleres</h2>
+          <h2>Cursos</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem.</p>
+          </div>
           <h2>Restauración</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
         </div>
-
-      </aside> -->
+      </aside>
     </div>
 
   </main>
