--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -92,36 +92,36 @@
   <main class="main">
     <div class="container">
       <h2>HISTORIA</h2>
-      <p>
-        La Fundación Cultural “Pedro Moncayo” de esta ciudad, conmemora el centésimo octogésimo octavo aniversario del
+      <p>La Fundación Cultural “Pedro Moncayo” de esta ciudad, conmemora el centésimo octogésimo octavo aniversario del
         nacimiento del jurisconsulto ibarreño, Sr. Dr. Pedro Moncayo y Esparza en la ciudad de Ibarra el 29 de junio de
         1807.</p>
-      <p>
-        La fundación Cultural “Pedro Moncayo”, nace en la ciudad de Ibarra en el mes de febrero de 1988, al conmemorar
+      <div class="image1">
+        <img src="../../img/img_history_1.jpg" alt="">
+        <label for="image1"><b>Figura 1.</b> Fundación Cultural Pedro Moncayo - 1994</label>
+      </div>
+      <p>La fundación Cultural “Pedro Moncayo”, nace en la ciudad de Ibarra en el mes de febrero de 1988, al conmemorar
         el primer centenario del fallecimiento de tan ilustre como conspicuo compatriota, la misma que nació para
         fomentar a la vez que acrecentar las inquietudes del espíritu y sobre todo para rescatar y difundir el
         pensamiento y la abundante obra de ese gran Patricio Ibarreño.</p>
-      <p>
-        Una de sus primeras gestiones fue la adquisición de la casa de ese gran hombre y distinguido caballero el Sr.
+      <p>Una de sus primeras gestiones fue la adquisición de la casa de ese gran hombre y distinguido caballero el Sr.
         Abelardo Páez Torres, Presidente del Ilustre Consejo Municipal por varias oportunidades y cuya familia estuviera
         consagrada al esfuerzo creador en beneficio de Ibarra.</p>
-      <p>
-        Esta señorial casa ibarreña, al igual que la ciudad de Ambato, la Casa de Montalvo, se ha convertido en la casa
+      <div class="image2">
+        <img src="../../img/img_history_2.jpg" alt="">
+        <label for="image2"><b>Figura 2.</b> Fundación Cultural Pedro Moncayo - 1994</label>
+      </div>
+      <p>Esta señorial casa ibarreña, al igual que la ciudad de Ambato, la Casa de Montalvo, se ha convertido en la casa
         del mas grande de los ibarreños, el Dr. Pedro Moncayo y Esparza, y esto gracias al esfuerzo de un grupo de
         hombres y mujeres aglutinadas en la fundación con verdadera mística de servicios y sobre todo con un inmerso
         afán de rescatar la memoria de tantos ilustres ibarreños.</p>
       <p>La Sra. Jenny Terán de Almeida, al ser elegida por el pueblo de Imbabura, Diputada de la Provincia de Imbabura
-        al Parlamento Nacional, consiguió un valioso aporte para esta monumental obra.
-      </p>
-      <p>
-        Tenia que ser una mujer con clara vocación de servicio a los demás, la que junto a su esposo hicieran posible
+        al Parlamento Nacional, consiguió un valioso aporte para esta monumental obra.</p>
+      <p>Tenia que ser una mujer con clara vocación de servicio a los demás, la que junto a su esposo hicieran posible
         una obra de trascendental valor, para el servicio de la ciudad, la provincia y la Patria, como lo es este
         edificio cuya arquitectura restaurada, se constituye en un legitimo orgullo para los ibarreños.</p>
-      <p>
-        Gracias a esta infraestructura, la Fundación Cultural “Pedro Moncayo”, abre sus puertas con fervor cívico y
+      <p>Gracias a esta infraestructura, la Fundación Cultural “Pedro Moncayo”, abre sus puertas con fervor cívico y
         solidaridad a todo el país y a nuestro pueblo.</p>
-      <p>
-        Porque somos los llamados a pregonar las glorias y excelsitudes del infatigable político, periodista,
+      <p>Porque somos los llamados a pregonar las glorias y excelsitudes del infatigable político, periodista,
         legislador, diplomático, historiador y jurista como lo es “Pedro Moncayo”, es que insistimos en la memoria del
         mas grande de los ibarreños frente a la indiferencia y olvido lamentables de nuestros ciudadanos.</p>
       <p>Para ratificar su grandeza, bástenos finalmente escuchar algunas palabras del Dr. Pedro Moncayo, quien cuando
