--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -128,24 +128,29 @@
         </div>
       </div>
       <h2>Lista de los Fundadores</h2>
+      <div class="container__founders-list">
+        <ul>
+          <li>Sr. Arq. Marco Almeida Vinueza</li>
+          <li>Prof. Roberto Morales Almeida</li>
+          <li>Sr. García Gallegos</li>
+          <li>Sra. Rosa Reascos Egas</li>
+        </ul>
 
-      <h3>Sr. Arq. Marco Almeida Vinueza</h3>
-
-      <h3>Prof. Roberto Morales Almeida</h3>
-
-      <h3>Sr. García Gallegos</h3>
-
-      <h3>Sra. Rosa Reascos Egas</h3>
-
+      </div>
       <h2>Lista de los Mentalizadores y Propulsores de su Constitución</h2>
-      <h3>Prof. Pedro Manuel Zumárraga</h3>
-      <h3>Sra. Clemencia Pavón</h3>
-      <h3>Sra. Cecilia Ponce Placencia</h3>
-      <h3>Lic. Susana Cifuentes Almeida</h3>
-      <h3>Dra. Mariana Guzmán Villena</h3>
-      <h3>Lcda. Alicia Bastidas</h3>
-      <h3>Dra. Inés Flores</h3>
-      <h3>Sra. Jenny Terán Estrada</h3>
+      <div class="container__extra-list">
+        <ul>
+          <li>Prof. Pedro Manuel Zumárraga</li>
+          <li>Sra. Clemencia Pavón</li>
+          <li>Sra. Cecilia Ponce Placencia</li>
+          <li>Lic. Susana Cifuentes Almeida</li>
+          <li>Dra. Mariana Guzmán Villena</li>
+          <li>Lcda. Alicia Bastidas</li>
+          <li>Dra. Inés Flores</li>
+          <li>Sra. Jenny Terán Estrada</li>
+        </ul>
+
+      </div>
     </div>
   </main>
 
