Name replacement in the footer section, on most pages.

--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="about-company__third-column">
-        <h2>Contact Us</h2>
+        <h2>Sugerencias</h2>
         <form action="#" method="post">
           <!-- <input type="text" name="name" id="name" placeholder="Nombres"> -->
           <input type="email" name="email" id="email" placeholder="Correo">
