Cleaning of all page fonts.

--- a/pages/workshop/index.html
+++ b/pages/workshop/index.html
@@ -107,8 +107,14 @@
               <p>Fundación Cultural Pedro Moncayo</p>
             </div>
           </div>
-          <label for="description">Descripción:</label>
-          <p class="description">Taller para aprender el manejo básico de una computadora.</p>
+          <label for="">Fecha del Evento:</label>
+          <p> 31 mayo, 2022</p>
+          <label for="">Hora del Evento:</label>
+          <p>15:00</p>
+          <label for="">Duración: </label>
+          <p>2 horas</p>
+          <label for="">Ubicación: </label>
+          <p>Instalaciones de la Fundación</p>
           <div class="more"><a href="">Ver Más</a></div>
         </div>
       </div>
@@ -128,8 +134,14 @@
               <p>Fundación Cultural Pedro Moncayo</p>
             </div>
           </div>
-          <label for="description">Descripción:</label>
-          <p class="description">Taller para aprender el manejo básico de una computadora.</p>
+          <label for="">Fecha del Evento:</label>
+          <p> 31 mayo, 2022</p>
+          <label for="">Hora del Evento:</label>
+          <p>15:00</p>
+          <label for="">Duración: </label>
+          <p>2 horas</p>
+          <label for="">Ubicación: </label>
+          <p>Instalaciones de la Fundación</p>
           <div class="more">
             <a href="">Ver Más</a>
           </div>
