--- a/index.html
+++ b/index.html
@@ -227,22 +227,23 @@
                 href="mailto:fundacionpedromoncayo@gmail.com">fundacionpedromoncayo@gmail.com</a></p>
             <p><i class="fas fa-phone-alt"></i><a href="tel:06 295 8922">06 295 8922</a></p>
             <p><i class="fas fa-mobile-alt"></i><a href="tel:+593 988449055">+593 988449055</a></p>
-            <p class="contacts__second-section__second-column__information__city"><b>Ibarra - Ecuador</b></p>
-          </div>
-          <div class="contacts__second-section__second-column__foundation">
-            <div class="contacts__second-section__second-column__foundation__logo">
-              <img src="./img/logo3.png">
+            <div class="contacts__second-section__second-column__information__city">
+              <p>Ibarra - Ecuador</p>
             </div>
-            <div class="contacts__second-section__second-column__foundation__name-foundation">
-              <div>
-                <p>FUNDACIÓN CULTURAL</p>
-                <p>"PEDRO MONCAYO"</p>
+            <div class="contacts__second-section__second-column__foundation">
+              <div class="contacts__second-section__second-column__foundation__logo">
+                <img src="./img/logo3.png">
+              </div>
+              <div class="contacts__second-section__second-column__foundation__name-foundation">
+                <div>
+                  <p>FUNDACIÓN CULTURAL</p>
+                  <p>"PEDRO MONCAYO"</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   </main>
 
   <!-- 
