Cleaning of the fonts on most pages.

--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -173,7 +173,9 @@
               href="mailto:fundacionpedromoncayo@gmail.com">fundacionpedromoncayo@gmail.com</a></p>
           <p><i class="fas fa-phone-alt"></i><a href="tel:06 295 8922">06 295 8922</a></p>
           <p><i class="fas fa-mobile-alt"></i><a href="tel:+593 988449055">+593 988449055</a></p>
-          <p class="about-company__second-column__information__city"><b>Ibarra - Ecuador</b></p>
+          <div class="about-company__second-column__information__city">
+            <p>Ibarra - Ecuador</p>
+          </div>
         </div>
       </div>
       <div class="about-company__third-column">
