The development of the workshop page is in progress.

--- a/pages/workshop/index.html
+++ b/pages/workshop/index.html
@@ -107,14 +107,24 @@
               <p>Fundación Cultural Pedro Moncayo</p>
             </div>
           </div>
-          <label for="">Fecha del Evento:</label>
-          <p> 31 mayo, 2022</p>
-          <label for="">Hora del Evento:</label>
-          <p>15:00</p>
-          <label for="">Duración: </label>
-          <p>2 horas</p>
-          <label for="">Ubicación: </label>
-          <p>Instalaciones de la Fundación</p>
+          <div class="details">
+            <div class="event-date">
+              <label for="">Fecha del Evento:</label>
+              <p> 31 mayo, 2022</p>
+            </div>
+            <div class="event-time">
+              <label for="">Hora del Evento:</label>
+              <p>15:00</p>
+            </div>
+            <div class="duration">
+              <label for="">Duración: </label>
+              <p>2 horas</p>
+            </div>
+            <div class="location">
+              <label for="">Ubicación: </label>
+              <p>Instalaciones de la Fundación</p>
+            </div>
+          </div>
           <div class="more"><a href="">Ver Más</a></div>
         </div>
       </div>
@@ -134,17 +144,25 @@
               <p>Fundación Cultural Pedro Moncayo</p>
             </div>
           </div>
-          <label for="">Fecha del Evento:</label>
-          <p> 31 mayo, 2022</p>
-          <label for="">Hora del Evento:</label>
-          <p>15:00</p>
-          <label for="">Duración: </label>
-          <p>2 horas</p>
-          <label for="">Ubicación: </label>
-          <p>Instalaciones de la Fundación</p>
-          <div class="more">
-            <a href="">Ver Más</a>
+          <div class="details">
+            <div class="event-date">
+              <label for="">Fecha del Evento:</label>
+              <p> 31 mayo, 2022</p>
+            </div>
+            <div class="event-time">
+              <label for="">Hora del Evento:</label>
+              <p>15:00</p>
+            </div>
+            <div class="duration">
+              <label for="">Duración: </label>
+              <p>2 horas</p>
+            </div>
+            <div class="location">
+              <label for="">Ubicación: </label>
+              <p>Instalaciones de la Fundación</p>
+            </div>
           </div>
+          <div class="more"><a href="">Ver Más</a></div>
         </div>
       </div>
     </div>
