Improvements to the workshops page.

--- a/pages/workshop/index.html
+++ b/pages/workshop/index.html
@@ -122,10 +122,13 @@
             </div>
             <div class="location">
               <label for="">Ubicación: </label>
-              <p>Instalaciones de la Fundación</p>
+              <p>Instalaciones de la Fundación Cultural Pedro Moncayo</p>
             </div>
           </div>
-          <div class="more"><a href="">Ver Más</a></div>
+          <div class="more">
+            <a href="">Ver Más</a>
+            <a href="">Inscribirme</a>
+          </div>
         </div>
       </div>
       <div class="container__card">
@@ -162,7 +165,10 @@
               <p>Instalaciones de la Fundación</p>
             </div>
           </div>
-          <div class="more"><a href="">Ver Más</a></div>
+          <div class="more">
+            <a href="">Ver Más</a>
+            <a href="">Inscribirme</a>
+          </div>
         </div>
       </div>
     </div>
