Design to the table of contents of the about us page.

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -93,11 +93,23 @@
     <div class="container">
       <div class="content">
         <div class="content-list">
-          <h3>Contenido</h3>
+          <h3>CONTENIDO</h3>
           <ul>
-            <li><a href="#QuienesSomos"><span>1. Quiénes Somos</span></a></li>
-            <li><a href="#Mision">2. Misión</a></li>
-            <li><a href="#Vision">3. Visión</a></li>
+            <li>
+              <a href="#QuienesSomos">
+                <span class="number">01</span><span class="title">Quiénes Somos</span>
+              </a>
+            </li>
+            <li>
+              <a href="#Mision">
+                <span class="number">02</span><span class="title">Misión</span>
+              </a>
+            </li>
+            <li>
+              <a href="#Vision">
+                <span class="number">03</span><span class="title">Visión</span>
+              </a>
+            </li>
           </ul>
         </div>
         <section id="QuienesSomos">
