Adding a side menu to certain pages.

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -8,6 +8,7 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar.css">
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
