--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -8,6 +8,7 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar.css">
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
@@ -91,49 +92,82 @@
    -->
   <main class="main">
     <div class="container">
-      <h2>HISTORIA</h2>
-      <p>La Fundación Cultural “Pedro Moncayo” de esta ciudad, conmemora el centésimo octogésimo octavo aniversario del
-        nacimiento del jurisconsulto ibarreño, Sr. Dr. Pedro Moncayo y Esparza en la ciudad de Ibarra el 29 de junio de
-        1807.</p>
-      <div class="image1">
-        <img src="../../img/img_history_1.jpg" alt="">
-        <label for="image1"><b>Figura 1.</b> Fundación Cultural Pedro Moncayo - 1994</label>
+      <div class="content">
+        <h2>HISTORIA</h2>
+        <p>La Fundación Cultural “Pedro Moncayo” de esta ciudad, conmemora el centésimo octogésimo octavo aniversario
+          del
+          nacimiento del jurisconsulto ibarreño, Sr. Dr. Pedro Moncayo y Esparza en la ciudad de Ibarra el 29 de junio
+          de
+          1807.</p>
+        <div class="image1">
+          <img src="../../img/img_history_1.jpg" alt="">
+          <label for="image1"><b>Figura 1.</b> Fundación Cultural Pedro Moncayo - 1994</label>
+        </div>
+        <p>La fundación Cultural “Pedro Moncayo”, nace en la ciudad de Ibarra en el mes de febrero de 1988, al
+          conmemorar
+          el primer centenario del fallecimiento de tan ilustre como conspicuo compatriota, la misma que nació para
+          fomentar a la vez que acrecentar las inquietudes del espíritu y sobre todo para rescatar y difundir el
+          pensamiento y la abundante obra de ese gran Patricio Ibarreño.</p>
+        <p>Una de sus primeras gestiones fue la adquisición de la casa de ese gran hombre y distinguido caballero el Sr.
+          Abelardo Páez Torres, Presidente del Ilustre Consejo Municipal por varias oportunidades y cuya familia
+          estuviera
+          consagrada al esfuerzo creador en beneficio de Ibarra.</p>
+        <div class="image2">
+          <img src="../../img/img_history_2.jpg" alt="">
+          <label for="image2"><b>Figura 2.</b> Fundación Cultural Pedro Moncayo - 1994</label>
+        </div>
+        <p>Esta señorial casa ibarreña, al igual que la ciudad de Ambato, la Casa de Montalvo, se ha convertido en la
+          casa
+          del mas grande de los ibarreños, el Dr. Pedro Moncayo y Esparza, y esto gracias al esfuerzo de un grupo de
+          hombres y mujeres aglutinadas en la fundación con verdadera mística de servicios y sobre todo con un inmerso
+          afán de rescatar la memoria de tantos ilustres ibarreños.</p>
+        <p>La Sra. Jenny Terán de Almeida, al ser elegida por el pueblo de Imbabura, Diputada de la Provincia de
+          Imbabura
+          al Parlamento Nacional, consiguió un valioso aporte para esta monumental obra.</p>
+        <p>Tenia que ser una mujer con clara vocación de servicio a los demás, la que junto a su esposo hicieran posible
+          una obra de trascendental valor, para el servicio de la ciudad, la provincia y la Patria, como lo es este
+          edificio cuya arquitectura restaurada, se constituye en un legitimo orgullo para los ibarreños.</p>
+        <p>Gracias a esta infraestructura, la Fundación Cultural “Pedro Moncayo”, abre sus puertas con fervor cívico y
+          solidaridad a todo el país y a nuestro pueblo.</p>
+        <p>Porque somos los llamados a pregonar las glorias y excelsitudes del infatigable político, periodista,
+          legislador, diplomático, historiador y jurista como lo es “Pedro Moncayo”, es que insistimos en la memoria del
+          mas grande de los ibarreños frente a la indiferencia y olvido lamentables de nuestros ciudadanos.</p>
+        <p>Para ratificar su grandeza, bástenos finalmente escuchar algunas palabras del Dr. Pedro Moncayo, quien cuando
+          Presidente de la Asamblea constituyente de 1852, expresara sobre la religión en el Estado: “No se trata de
+          examinar cual es la religión verdadera, porque todos estamos contentos con la religión que poseemos con la
+          religión que heredamos de nuestros padres, con la religión del crucificado que vino al mundo para redimir al
+          genero humano, para predicar la emancipación del hombre y establecer el santo dogma de la igualdad, pisoteada
+          y
+          ultrajada por los ambiciosos de la tierra, siendo la religión obra de corazón y de la conciencia, y no de la
+          fuerza pública, claro está, que no puede estar sujeta a los preceptos del legislador, sino a la convicción
+          individual de cada ciudadano”. Indudablemente una expresión que mantiene su vigencia, a pesar de que fuera
+          pronunciada hace 143 años.</p>
       </div>
-      <p>La fundación Cultural “Pedro Moncayo”, nace en la ciudad de Ibarra en el mes de febrero de 1988, al conmemorar
-        el primer centenario del fallecimiento de tan ilustre como conspicuo compatriota, la misma que nació para
-        fomentar a la vez que acrecentar las inquietudes del espíritu y sobre todo para rescatar y difundir el
-        pensamiento y la abundante obra de ese gran Patricio Ibarreño.</p>
-      <p>Una de sus primeras gestiones fue la adquisición de la casa de ese gran hombre y distinguido caballero el Sr.
-        Abelardo Páez Torres, Presidente del Ilustre Consejo Municipal por varias oportunidades y cuya familia estuviera
-        consagrada al esfuerzo creador en beneficio de Ibarra.</p>
-      <div class="image2">
-        <img src="../../img/img_history_2.jpg" alt="">
-        <label for="image2"><b>Figura 2.</b> Fundación Cultural Pedro Moncayo - 1994</label>
-      </div>
-      <p>Esta señorial casa ibarreña, al igual que la ciudad de Ambato, la Casa de Montalvo, se ha convertido en la casa
-        del mas grande de los ibarreños, el Dr. Pedro Moncayo y Esparza, y esto gracias al esfuerzo de un grupo de
-        hombres y mujeres aglutinadas en la fundación con verdadera mística de servicios y sobre todo con un inmerso
-        afán de rescatar la memoria de tantos ilustres ibarreños.</p>
-      <p>La Sra. Jenny Terán de Almeida, al ser elegida por el pueblo de Imbabura, Diputada de la Provincia de Imbabura
-        al Parlamento Nacional, consiguió un valioso aporte para esta monumental obra.</p>
-      <p>Tenia que ser una mujer con clara vocación de servicio a los demás, la que junto a su esposo hicieran posible
-        una obra de trascendental valor, para el servicio de la ciudad, la provincia y la Patria, como lo es este
-        edificio cuya arquitectura restaurada, se constituye en un legitimo orgullo para los ibarreños.</p>
-      <p>Gracias a esta infraestructura, la Fundación Cultural “Pedro Moncayo”, abre sus puertas con fervor cívico y
-        solidaridad a todo el país y a nuestro pueblo.</p>
-      <p>Porque somos los llamados a pregonar las glorias y excelsitudes del infatigable político, periodista,
-        legislador, diplomático, historiador y jurista como lo es “Pedro Moncayo”, es que insistimos en la memoria del
-        mas grande de los ibarreños frente a la indiferencia y olvido lamentables de nuestros ciudadanos.</p>
-      <p>Para ratificar su grandeza, bástenos finalmente escuchar algunas palabras del Dr. Pedro Moncayo, quien cuando
-        Presidente de la Asamblea constituyente de 1852, expresara sobre la religión en el Estado: “No se trata de
-        examinar cual es la religión verdadera, porque todos estamos contentos con la religión que poseemos con la
-        religión que heredamos de nuestros padres, con la religión del crucificado que vino al mundo para redimir al
-        genero humano, para predicar la emancipación del hombre y establecer el santo dogma de la igualdad, pisoteada y
-        ultrajada por los ambiciosos de la tierra, siendo la religión obra de corazón y de la conciencia, y no de la
-        fuerza pública, claro está, que no puede estar sujeta a los preceptos del legislador, sino a la convicción
-        individual de cada ciudadano”. Indudablemente una expresión que mantiene su vigencia, a pesar de que fuera
-        pronunciada hace 143 años.</p>
+      <aside class="nav-lateral">
+        <div class="nav-lateral-list">
+          <h2>Cursos</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem.</p>
+          </div>
+          <h2>Restauración</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
+        </div>
+      </aside>
     </div>
+
   </main>
 
   <!-- 
