--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -8,6 +8,8 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar.css">
+
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
@@ -97,61 +99,88 @@
         propulsores de su constitución; Prof. Pedro Manuel Zumárraga, Sra Clemencia Pavón, Sra. Cecilia Ponce Placencia,
         Lic. Susana Cifuentes Almeida, Dra. Mariana Guzmán Villena, Lcda. Alicia Bastidas, Dra. Inés Flores y Sra. Jenny
         Terán Estrada.</p> -->
-      <h2>Dirección Actual</h2>
-      <div class="container__first">
-        <div class="container__first__cell">
-          <img src="../../img/image_example.jpg">
-          <h3>García Gallegos Mario Francisco Raul</h3>
-          <h3>Presidente Ejecutivo</h3>
+      <div class="content">
+        <h2>Dirección Actual</h2>
+        <div class="container__first">
+          <div class="container__first__cell">
+            <img src="../../img/image_example.jpg">
+            <h3>García Gallegos Mario Francisco Raul</h3>
+            <h3>Presidente Ejecutivo</h3>
+          </div>
+          <div class="container__first__cell">
+            <img src="../../img/user_icon.png">
+            <h3>Madera Castillo Jorge Enrique</h3>
+            <h3>Vicepresidente</h3>
+          </div>
         </div>
-        <div class="container__first__cell">
-          <img src="../../img/user_icon.png">
-          <h3>Madera Castillo Jorge Enrique</h3>
-          <h3>Vicepresidente</h3>
+        <div class="container__second">
+          <div class="container__second__cell">
+            <img src="../../img/user_icon.png">
+            <h3>Naranjo Toro Miguel Edmundo</h3>
+            <h3>Primer Vocal</h3>
+          </div>
+          <div class="container__second__cell">
+            <img src="../../img/user_icon.png">
+            <h3>Revelo Cuaspud Luis Fernando</h3>
+            <h3>Segundo Vocal</h3>
+          </div>
+          <div class="container__second__cell">
+            <img src="../../img/user_icon.png">
+            <h3>Villalba Subidia José Rafael</h3>
+            <h3>Tercer Vocal</h3>
+          </div>
         </div>
-      </div>
-      <div class="container__second">
-        <div class="container__second__cell">
-          <img src="../../img/user_icon.png">
-          <h3>Naranjo Toro Miguel Edmundo</h3>
-          <h3>Primer Vocal</h3>
-        </div>
-        <div class="container__second__cell">
-          <img src="../../img/user_icon.png">
-          <h3>Revelo Cuaspud Luis Fernando</h3>
-          <h3>Segundo Vocal</h3>
-        </div>
-        <div class="container__second__cell">
-          <img src="../../img/user_icon.png">
-          <h3>Villalba Subidia José Rafael</h3>
-          <h3>Tercer Vocal</h3>
-        </div>
-      </div>
-      <h2>Lista de los Fundadores</h2>
-      <div class="container__founders-list">
-        <ul>
-          <li>Sr. Arq. Marco Almeida Vinueza</li>
-          <li>Prof. Roberto Morales Almeida</li>
-          <li>Sr. García Gallegos</li>
-          <li>Sra. Rosa Reascos Egas</li>
-        </ul>
+        <h2>Lista de los Fundadores</h2>
+        <div class="container__founders-list">
+          <ul>
+            <li>Sr. Arq. Marco Almeida Vinueza</li>
+            <li>Prof. Roberto Morales Almeida</li>
+            <li>Sr. García Gallegos</li>
+            <li>Sra. Rosa Reascos Egas</li>
+          </ul>
 
-      </div>
-      <h2>Lista de los Mentalizadores y Propulsores de su Constitución</h2>
-      <div class="container__extra-list">
-        <ul>
-          <li>Prof. Pedro Manuel Zumárraga</li>
-          <li>Sra. Clemencia Pavón</li>
-          <li>Sra. Cecilia Ponce Placencia</li>
-          <li>Lic. Susana Cifuentes Almeida</li>
-          <li>Dra. Mariana Guzmán Villena</li>
-          <li>Lcda. Alicia Bastidas</li>
-          <li>Dra. Inés Flores</li>
-          <li>Sra. Jenny Terán Estrada</li>
-        </ul>
+        </div>
+        <h2>Lista de los Mentalizadores y Propulsores de su Constitución</h2>
+        <div class="container__extra-list">
+          <ul>
+            <li>Prof. Pedro Manuel Zumárraga</li>
+            <li>Sra. Clemencia Pavón</li>
+            <li>Sra. Cecilia Ponce Placencia</li>
+            <li>Lic. Susana Cifuentes Almeida</li>
+            <li>Dra. Mariana Guzmán Villena</li>
+            <li>Lcda. Alicia Bastidas</li>
+            <li>Dra. Inés Flores</li>
+            <li>Sra. Jenny Terán Estrada</li>
+          </ul>
 
+        </div>
       </div>
+
+      <aside class="nav-lateral">
+        <div class="nav-lateral-list">
+          <h2>Cursos</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem.</p>
+          </div>
+          <h2>Restauración</h2>
+          <div class="card">
+            <h3>Visión por computador</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus doloremque totam optio ipsa id
+              maxime dolorem, animi minus accusamus eum nemo nesciunt aliquam, fuga earum dolorum modi autem voluptates
+              libero.</p>
+          </div>
+        </div>
+      </aside>
     </div>
+
   </main>
 
   <!-- 
