--- a/pages/history/index.html
+++ b/pages/history/index.html
@@ -90,61 +90,89 @@
     TODO: -------------------------------------------
    -->
   <main class="main">
-    <div class="container">
-      <h2>HISTORIA</h2>
-      <p>
-        En la ciudad de Ibarra, día Jueves Veinticuatro de Marzo de Mil Novecientos Ochenta y Ocho, a las 17H30 (5:30
-        P.M.) en la Sala de la Alcaldía Municipal del Cantón, bajo la Presencia del Sr. Arq. Marco Almeida Vinueza,
-        Alcalde de Ibarra, se instala la sesión convocada con la finalidad de proceder a la constitución de la Fundación
-        Cultural “Pedro Moncayo”, con la asistencia de los señores: Pedro Manuel Zumárraga D., Presidente de la casa de
-        la Cultura Ecuatoriana “Benjamín Carrión”, núcleo de Imbabura; Prof. Roberto Morales Almeida; Marta de la Torre
-        de Jácome, Presidenta del Centro Femenino de Cultura “Ibarra”; Cecilia Ponce de Jaramillo, Presidenta del Comité
-        Ecuatoriano de Cooperación con la comisión Interamericana de Mujeres “CECIM”, Filial de Imbabura; Mario García
-        Gallegos, Presidente de la Sociedad Bolivariana de Imbabura; Filial del Ecuador; y Rosa Beatriz Reascos Egas,
-        Jefa del Archivo Histórico de la Municipalidad, actuando el infrascrito Secretario Ad-Hoc, que certifica:</p>
-      <p>
-        Previamente el Sr. Arq. Marco Almeida Vinueza, Alcalde de Ibarra informa con respecto a los alcances y
-        finalidades que se persigue con la creación de la Fundación Cultural “Pedro Moncayo” con domicilio en esta
-        ciudad, cuyos principales objetivos constituyen el estudio, la investigación y difusión de la obra del Ilustre
-        Patricio Ibarreño, Dr. Pedro Moncayo y Esparza, cuya proficua labor en los diversos campos del saber humano, ha
-        dado especial lustre y prestigio a su tierra natal y al país en general, dignos del homenaje y reconocimiento
-        públicos, lo que ha motivado la necesidad de la creación de esta Fundación Cultural, con oportunidad de la
-        conmemoración del homenaje y reconocimiento públicos, lo que ha motivado la necesidad de la creación de esta
-        Fundación Cultural, con oportunidad de la conmemoración del Primer Centenario de su fallecimiento acaecido el 3
-        de Febrero de 1888, manifestando además que la Ilustre Municipalidad ha tenido la feliz iniciativa de rendir
-        este homenaje a través de la emisión de sellos postales con la efigie del Dr. Pedro Moncayo, así como igualmente
-        la colocación de una placa en el nuevo Palacio Municipal próximo a inaugurarse en la misma que constará un
-        pensamiento del ilustre Ibarreño que sintetice los ideales de democracia, libertad y civismo.
-      </p>
-      <p>
-        Todos los presentes en esta sesión dejan expresa constancia de su felicitación al Sr. Arq. Marco Almeida
-        Vinueza, alcalde de Ibarra, por esta valiosa iniciativa y el sincero afán de prestar su decidida colaboración
-        para llevar adelante la creación y funcionamiento de la Fundación Cultural “Pedro Moncayo”.
-      </p>
-      <p>
-        Se procede en consecuencia como paso inicial para la cristalización del proyecto al conocimiento y discusión de
-        los estatutos que regirán el funcionamiento de la mencionada Fundación, documento que deberá remitirse al
-        Ministerio de Educación y Cultura para su correspondiente trámite de aprobación.
-      </p>
-      <p>
-        Luego de darse lectura a dichos Estatutos, se resuelve aprobarlos en primera discusión, con las siguientes
-        modificaciones:
-      </p>
-      <p>
-        En el Articulo 6°, luego de la palabra “necesidades” se incluirá la frase “administrativas y de investigación”.
-      </p>
-      <p>
-        En el Artículo 7° a continuación del literal c) se dirá: “Teniendo los miembros Fundadores el derecho de seguir
-        perteneciendo a esta Fundación en forma indefinida en el caso de manifestar su voluntad en este sentido”.
-      </p>
-      <p>
-        En esta forma queda constituida la Fundación Cultural “Pedro Moncayo”, debiendo como es de rigor procederse a la
-        segunda y definitiva discusión y aprobación de los estatutos correspondientes, para cuyo efecto se fija el día
-        viernes 25 de marzo de 1988 para realizar la sesión pertinente para esta finalidad.
-      </p>
-      <p>Siendo las 18H30 (6:30 P.M.), el Sr. alcalde declara clausurada la presente sesión, agradeciendo la presencia
-        de los concursantes.</p>
-    </div>
+    <div id="top"></div>
+    <section class="gallery">
+      <div class="row">
+        <ul>
+          <a href="#" class="close"></a>
+          <li>
+            <a href="#item02">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/3981307/lorena2.png" alt="">
+            </a>
+          </li>
+
+          <li>
+            <a href="#item02">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/3892302/contact.png" alt="">
+            </a>
+          </li>
+
+          <li>
+            <a href="#item02">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/4154721/dive--001.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="image" href="#item01">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/4356121/darko--dr.jpg" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="image" href="#item02">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/3695553/news.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="image" href="#item01">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/4360101/liberosis_--_12.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="image" href="#item01">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/3148799/technical-book.jpg" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="image" href="#item01">
+              <img src="https://cdn.dribbble.com/users/545884/screenshots/2883479/cover.jpg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div> <!-- / row -->
+
+      <!-- Item 01 -->
+      <div id="item01" class="port">
+
+        <div class="row">
+          <div class="description">
+            <h1>Item 01</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac
+              purus
+              est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+          </div>
+
+          <img src="https://cdn.dribbble.com/users/545884/screenshots/3981307/lorena2.png" alt="">
+        </div>
+      </div> <!-- / row -->
+
+      </div> <!-- / Item 02 -->
+
+      <!-- Item 02 -->
+      <div id="item02" class="port">
+
+        <div class="row">
+          <div class="description">
+            <h1>Item 02</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac
+              purus
+              est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+          </div>
+          <img src="https://cdn.dribbble.com/users/545884/screenshots/2883479/cover.jpg" alt="">
+        </div> <!-- / row -->
+
+      </div> <!-- / Item 02 -->
+
+    </section> <!-- / projects -->
   </main>
 
   <!-- 
@@ -227,7 +255,7 @@
       <span class="footer-bottom__copyright">© Copyright 2022 | Fundación Cultural Pedro Moncayo</span>
     </div>
   </footer>
-  <script src="../../script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
