--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -92,6 +92,9 @@
    -->
   <main class="main">
     <div class="container">
+      <div class="social">
+        <p>redes sociales</p>
+      </div>
       <div class="content">
         <div class="content-list">
           <h3>CONTENIDO</h3>
