Addition of welcome menu.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
     <div class="swiper-pagination"></div>
   </div>
 
+  <div class="welcome"
+    style="position: absolute; left: 25%; top: 40%; z-index: 1000; transform: translate(-50%, -50%); background: rgba(212, 169, 0, 0.5); padding: 3em 1em; font-size: 20px; font-weight: 200; width: 17em; border-radius: 2em;">
+    <p>La Fundación Cultural Pedro Moncayo te da la Bienvenida.</p>
+    <audio controls autoplay>
+      <source src="./assets/prueba.mp3" type="audio/mp3">
+      Tu navegador no soporta audio HTML5.
+    </audio>
+  </div>
+
   <!-- 
     TODO: -------------------------------------------
     TODO: CUERPO
