--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -93,7 +93,10 @@
   <main class="main">
     <div class="container">
       <div class="social">
-        <p>redes sociales</p>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-whatsapp"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
       </div>
       <div class="content">
         <div class="content-list">
