Fix to the sidebars design.

--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -8,6 +8,7 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar_social.css">
   <link rel="stylesheet" href="../../css/sidebar.css">
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -92,6 +93,24 @@
    -->
   <main class="main">
     <div class="container">
+      <div class="social">
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-facebook"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-twitter"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-whatsapp"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-instagram"></i></a>
+        </div>
+      </div>
       <div class="content">
         <h2>HISTORIA</h2>
         <p>La Fundación Cultural “Pedro Moncayo” de esta ciudad, conmemora el centésimo octogésimo octavo aniversario
