--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -8,8 +8,8 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar_social.css">
   <link rel="stylesheet" href="../../css/sidebar.css">
-
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
@@ -93,6 +93,20 @@
    -->
   <main class="main">
     <div class="container">
+      <div class="social">
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
       <!-- <p>
         La Asamblea General de la Fundación está integrada por los siguientes Miembros Activos: El Sr. Arq. Marco
         Almeida Vinueza, y Prof. Roberto Morales Almeida, Sr. Garcia Gallejos y Sra. Rosa Reascos Egas, mentalizadores y
