--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -8,6 +8,7 @@
   <title>Fundación Cultural Pedro Moncayo</title>
   <link rel="stylesheet" href="../../css/header.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../css/sidebar_social.css">
   <link rel="stylesheet" href="../../css/sidebar.css">
   <link rel="stylesheet" href="../../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -93,10 +94,18 @@
   <main class="main">
     <div class="container">
       <div class="social">
-        <a href=""><i class="fab fa-facebook"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-whatsapp"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
       </div>
       <div class="content">
         <div class="content-list">
